2004-10-01  Stefan Jahn  <stefan@lkcc.org>

	* docs/es/index.html: Updated spanish documentation pages.

	* qucs_es.ts: Applied spanish translation updates.

2004-09-30  Stefan Jahn  <stefan@lkcc.org>

	* docs/Makefile.am (SUBDIRS): Added the es/ directory
	supplied by Jose L. Redrejo Rodriguez.  Thanks a lot!

	* qucsinit.cpp (slotHelpAbout): Mentioned Jose as Spanish
	translator in the About.. box.

	* qucs_es.ts: Applied the spanish translation.  Thanks to
	Jose L. Redrejo Rodriguez.

2004-09-29  Stefan Jahn  <stefan@lkcc.org>

	* docs/Makefile.am (dist_man_MANS): Added simple man page.

2004-09-26  Michael Margraf   <michael.margraf@alumni.tu-berlin.de>

	* placing component over wire, deletes wire
	* wire labels move correctly with paste
	* rotate and mirror wire labels correctly
	* fixed bug that did not revert the edit mode status after
	closing a project
	* changed status line text for symbol edit mode
	* fixed bug that remove node labels when rotating or
	mirroring
	* add components: vrect and irect
	* add progress bar to the simulation window

2004-09-25  Stefan Jahn  <stefan@lkcc.org>

	* paintings/painting.h: Made 'Name' a QString in order to
	allow the '==' comparisons.

	* docs/en/Makefile.am (HTML): Added missing 'programs.html'
	file to the list of installed files.

2004-09-19  Michael Margraf   <michael.margraf@alumni.tu-berlin.de>

	* CTRL+U = edit circuit symbol
	* F5 = show last message
	* fixed bug that prevents default circuit symbol to be
	drawn
	* new entry in mouse menu: "delete group"
	* fixed bug that didn't copy node labels

2004-09-19  Michael Margraf   <michael.margraf@alumni.tu-berlin.de>

	* subcircuit symbols can be defined by the user

2004-09-12  Michael Margraf   <michael.margraf@alumni.tu-berlin.de>

	* correct cursor symbols at zoom

2004-09-15  Stefan Jahn  <stefan@lkcc.org>

	* qucs_de.ts: Updated german translation.

	* Makefile.am (%.ts): Added translations of qucs-help and
	qucs-edit.
