@@ -3613,6 +3613,15 @@ Edits the symbol for this schematic</source>
 Edits the schematic</source>
         <translation type="unfinished"></translation>
     </message>
+    <message>
+        <source>This will delete the files
+</source>
+        <translation type="unfinished"></translation>
+    </message>
+    <message>
+        <source>permanently! Continue ?</source>
+        <translation type="unfinished"></translation>
+    </message>
 </context>
 <context>
     <name>QucsEdit</name>
