@@ -1,3 +1,8 @@
+2004-10-03  Stefan Jahn  <stefan@lkcc.org>
+
+	* dialogs/simmessage.cpp (slotDisplayMsg): Fixed layout
+	and progress bar filter of simulation messages.
+
 2004-10-01  Stefan Jahn  <stefan@lkcc.org>
 
 	* docs/es/index.html: Updated spanish documentation pages.
